<resources>

    <string name="app_name">Suosikkipysäkit</string>
    <string name="activity_main_title">Suosikkipysäkit</string>
    <string name="activity_main_add_stop_button">Uusi pysäkki</string>
    <string name="activity_main_no_stops_in_collection">Kokoelmassa ei ole yhtään pysäkkiä</string>
    <string name="activity_departures_dialog_title">Haetaan lähtöjä</string>
    <string name="activity_departures_nothing_found">Tältä pysäkiltä ei ole lähiaikoina yhtään lähtöä</string>
    <string name="activity_departures_title">Seuraavat lähdöt</string>
    <string name="activity_add_stop_title">Lisää pysäkki</string>
    <string name="activity_add_stop_code_instructions">Jos olet juuri nyt bussipysäkillä, katso pysäkin tunnus ja syötä se alla olevaan tekstikenttään.</string>
    <string name="activity_add_stop_code_hint">Pysäkin numero</string>
    <string name="activity_add_stop_search_by_code">Hae pysäkkiä</string>
    <string name="activity_add_stop_line_instructions">Jos et tiedä pysäkin tunnusta, hae pysäkkejä linjan avulla, esim. 3T, 9, 78, 550, K, Z, Metro, Lautta.</string>
    <string name="activity_add_stop_line_hint">Linjan tunnus tai hakusana</string>
    <string name="activity_add_stop_search_by_line">Hae linjaa</string>
    <string name="activity_add_stop_stop_not_found">Pysäkkiä ei löytynyt</string>
    <string name="activity_add_stop_line_not_found" >Yhtään linjaa ei löytynyt</string>
    <string name="activity_add_stop_invalid_code">Virheellinen pysäkkitunnus. Esimerkkejä kelvollisesta tunnuksesta: 1234, E1234, V1234, Tu1234, Ke1234, Jä1234.</string>
    <string name="activity_add_stop_empty_line">Syötä linjan tunnus</string>
    <string name="activity_add_stop_spaces_in_line">Hakusana ei saa sisältää välilyöntejä</string>
    <string name="activity_add_stop_code_wait_dialog_title">Haetaan pysäkkiä</string>
    <string name="activity_add_stop_line_wait_dialog_title">Haetaan linjoja</string>
    <string name="activity_lines_title">Valitse linja</string>
    <string name="activity_line_stops_title">Valitse pysäkki</string>
    <string name="activity_stops_visibility_title">Pysäkkien näkyvyys</string>
    <string name="activity_stops_visibility_info_text">Valitse pysäkit, jotka näkyvät suosikkilistauksessasi.</string>
    <string name="activity_stops_visibility_changed_to_hidden">Pysäkki piilotettu</string>
    <string name="activity_stops_visibility_changed_to_visible">Pysäkki laitettu näkyviin</string>
    <string name="dialog_new_stop_no_save">Näytä lähdöt tallentamatta pysäkkiä</string>
    <string name="dialog_new_stop_title">Syötä pysäkin nimi</string>
    <string name="dialog_new_stop_save">Tallenna</string>
    <string name="dialog_new_stop_continue">Jatka</string>
    <string name="dialog_rename_stop_title">Syötä pysäkin nimi</string>
    <string name="dialog_rename_stop_save">Tallenna</string>
    <string name="dialog_add_to_collection_title">Lisää pysäkkikokoelmaan</string>
    <string name="dialog_add_to_collection_spinner_default">- Uusi kokoelma -</string>
    <string name="dialog_add_to_collection_name_hint">Pysäkkikokoelman nimi</string>
    <string name="dialog_rename_collection_title">Syötä kokoelman nimi</string>
    <string name="save">Tallenna</string>
    <string name="cancel">Peruuta</string>
    <string name="connection_problem">HSL:n palvelimeen ei saatu yhteyttä. Varmista, että jokin verkkoyhteys on käytettävissä, ja yritä hetken kuluttua uudestaan.</string>
    <string name="please_wait">Odota hetki…</string>
    <string name="menu_stop_item_rename">Vaihda nimeä</string>
    <string name="menu_stop_item_add_to_collection">Lisää pysäkkikokoelmaan</string>
    <string name="menu_stop_item_hide">Piilota</string>
    <string name="menu_stop_item_delete">Poista</string>
    <string name="menu_collection_item_rename">Vaihda nimeä</string>
    <string name="menu_collection_item_delete">Poista kokoelma</string>
    <string name="menu_main_stops_visibility">Näytä/piilota pysäkkejä</string>

    <string-array name="cities">
        <item>Helsinki</item>
        <item>Espoo</item>
        <item>Vantaa</item>
        <item>Kerava</item>
        <item>Järvenpää</item>
        <item>Tuusula</item>
    </string-array>

</resources>