<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/add_stop_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/activity_add_stop_code_hint"
        android:maxLength="6"
        tools:context=".AddStopActivity" />
    
    <Button
        android:id="@+id/add_stop_code_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_stop_code"
        android:text="@string/activity_add_stop_search_by_code"
        android:onClick="searchStop" />

    <EditText
        android:id="@+id/add_stop_line"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_stop_code_button"
        android:inputType="textCapCharacters"
        android:hint="@string/activity_add_stop_line_hint"
        android:maxLength="4"
        tools:context=".AddStopActivity" />
    
    <Button 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/add_stop_line"
        android:text="@string/activity_add_stop_search_by_line"
        android:onClick="searchLine" />

</RelativeLayout>
